# test_InstallBiz

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  pyproject.toml
apps/catalog_api/: .dockerignore  Cargo.toml  Dockerfile  README.md
apps/catalog_api/src/: main.rs
apps/catalog_api/src/domain/: errors.rs
apps/catalog_api/src/domain/services/: admin_service.rs  file_names_service.rs  mark_downloaded_service.rs  mod.rs
apps/catalog_api/src/infrastructure/: config.rs
apps/catalog_api/src/infrastructure/http/: app_state.rs  extractors.rs  handlers.rs  mod.rs  openapi.json  openapi.rs
apps/catalog_api/src/infrastructure/persistence/: in_memory_rate_limiter.rs  mod.rs  store.rs
apps/catalog_client/: .dockerignore  .env.example  Dockerfile  pyproject.toml
apps/catalog_client/migrations/versions/: b3b28b9aa5bb_initial.py
apps/catalog_client/src/app/: celery_app.py  config.py  di.py  main.py
apps/catalog_client/src/app/domain/: entities.py  exceptions.py
apps/catalog_client/src/app/static/: app.css
apps/file-stats-service/: README.md  docker-compose.yml  pyproject.toml
apps/file-stats-service/migrations/: env.py
apps/file-stats-service/src/app/: logging_config.py
apps/file-stats-service/src/app/adapters/inbound/celery_tasks/: tasks.py
apps/file-stats-service/src/app/adapters/outbound/celery/: task_dispatcher.py
apps/file-stats-service/src/app/application/use_cases/: compute_statistics.py  start_download.py
apps/file-stats-service/src/app/domain/ports/: file_repository.py  task_dispatcher.py
apps/file-stats-service/src/app/templates/: download.html
apps/test_catalog_api/: Cargo.toml  Dockerfile
apps/test_catalog_api/src/domain/: models.rs  ports.rs
apps/test_catalog_api/src/infrastructure/: config.rs  mod.rs
(+24 files in other folders)
