[package]
name = "catalog_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "=0.7.9", features = ["json", "macros"] }
tokio = { version = "=1.40.0", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
tower = { version = "=0.4.13", features = ["util"] }
tower-http = { version = "=0.5.2", features = ["trace", "cors"] }
serde = { version = "=1.0.210", features = ["derive"] }
serde_json = "=1.0.128"
async-trait = "=0.1.83"
rand = "=0.8.5"
getrandom = "=0.2.15"
uuid = { version = "=1.10.0", features = ["v4"] }
thiserror = "=1.0.64"
tracing = "=0.1.40"
tracing-subscriber = { version = "=0.3.18", features = ["env-filter"] }
zip = { version = "=0.6.6", default-features = false, features = ["deflate"] }
mime = "=0.3.17"