[project]
name = "file-stats-service"
version = "0.1.0"
description = "Сервис скачивания каталога файлов через внешнее API и подсчёта статистики по цифрам (гексагональная архитектура)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "pyrate-limiter>=3.6.0",
    "celery>=5.4.0",
    "redis>=5.0.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "advanced-alchemy>=0.17.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "dishka>=1.4.0",
    "pydantic-settings>=2.3.0",
    "alembic>=1.13.0",
    "python-json-logger>=2.0.7",
    "tzdata>=2024.1",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]
